--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 								<!-- <li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li> -->
 								<!-- <li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li> -->
 								<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
-                                <li><a href="#" class="icon solid fa-instagram"><span class="label">Email</span></a></li>
+                                <li><a href="#" class="icon solid fa-instagram"><span class="label">Instagram</span></a></li>
 							</ul>
 						</nav>
 					</header>
