--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <h1>Hafiffi Ismail</h1>
         <p class="subtitle">IT Executive at IIUM Holdings | Infrastructure & Systems Expert</p>
         <div class="links">
-            <a href="https://www.linkedin.com/in/hafiffiismail" target="_blank" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
+            <a href="www.linkedin.com/in/hafiffi-ismail-b9a40b7b" target="_blank" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
             <a href="https://github.com/xhafism" target="_blank" title="GitHub"><i class="fab fa-github"></i></a>
             <a href="mailto:eppiey@live.co.uk" title="Email"><i class="fas fa-envelope"></i></a>
             <a href="https://www.instagram.com/haf.ism" target="_blank" title="Instagram"><i class="fab fa-instagram"></i></a>
