--- a/index.html
+++ b/index.html
@@ -59,6 +59,45 @@
             <a href="https://www.instagram.com/haf.ism" target="_blank" title="Instagram"><i class="fab fa-instagram"></i></a>
         </div>
     </div>
+
+    <div class="portfolio">
+        <h2>Selected Projects</h2>
+        <ul style="list-style: none; padding: 0; font-size: 1rem; text-align: left; max-width: 600px; margin: 1rem auto;">
+            <li>✔️ Microsoft 365 Implementation for IIUM Holdings</li>
+            <li>✔️ VPN & Remote Access for File Server</li>
+            <li>✔️ Ubiquiti AP Upgrade for IIUM Schools</li>
+            <li>✔️ Proxmox Server Setup with Docker (Snipe-IT, Guacamole, etc.)</li>
+            <li>✔️ Laravel Vendor Management System with Tender Module</li>
+        </ul>
+    </div>
+
+    <div class="skills" style="margin-top: 2rem; max-width: 600px; width: 100%;">
+        <h2>My Strengths</h2>
+        <div style="margin-bottom: 1rem;">
+            <label>Networking & Firewalls (Fortinet, Sophos)</label>
+            <div style="background: #333; height: 20px; border-radius: 10px;">
+                <div style="width: 90%; background: #0af; height: 100%; border-radius: 10px;"></div>
+            </div>
+        </div>
+        <div style="margin-bottom: 1rem;">
+            <label>Cloud Services & Microsoft 365</label>
+            <div style="background: #333; height: 20px; border-radius: 10px;">
+                <div style="width: 85%; background: #0af; height: 100%; border-radius: 10px;"></div>
+            </div>
+        </div>
+        <div style="margin-bottom: 1rem;">
+            <label>Linux Server & Virtualization</label>
+            <div style="background: #333; height: 20px; border-radius: 10px;">
+                <div style="width: 80%; background: #0af; height: 100%; border-radius: 10px;"></div>
+            </div>
+        </div>
+        <div style="margin-bottom: 1rem;">
+            <label>Laravel & Web Development</label>
+            <div style="background: #333; height: 20px; border-radius: 10px;">
+                <div style="width: 75%; background: #0af; height: 100%; border-radius: 10px;"></div>
+            </div>
+        </div>
+    </div>
     <footer>
         &copy; 2025 Hafiffi Ismail.
     </footer>
