--- a/index.html
+++ b/index.html
@@ -63,11 +63,11 @@
     <div class="portfolio">
         <h2>Selected Projects</h2>
         <ul style="list-style: none; padding: 0; font-size: 1rem; text-align: left; max-width: 600px; margin: 1rem auto;">
-            <li>✔️ Microsoft 365 Implementation for IIUM Holdings</li>
-            <li>✔️ VPN & Remote Access for File Server</li>
-            <li>✔️ Ubiquiti AP Upgrade for IIUM Schools</li>
-            <li>✔️ Proxmox Server Setup with Docker (Snipe-IT, Guacamole, etc.)</li>
-            <li>✔️ Laravel Vendor Management System with Tender Module</li>
+            <li><i class="fas fa-circle-check" style="color:#0af;"></i> Microsoft 365 Implementation for IIUM Holdings</li>
+            <li><i class="fas fa-circle-check" style="color:#0af;"></i> VPN & Remote Access for File Server</li>
+            <li><i class="fas fa-circle-check" style="color:#0af;"></i> Ubiquiti AP Upgrade for IIUM Schools</li>
+            <li><i class="fas fa-circle-check" style="color:#0af;"></i> Proxmox Server Setup with Docker (Snipe-IT, Guacamole, etc.)</li>
+            <li><i class="fas fa-circle-check" style="color:#0af;"></i> Laravel Vendor Management System with Tender Module</li>
         </ul>
     </div>
 
